# libmeta

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.MD
docs/: meta-parser-rule.md  代码生成.md  设计思路.MD
example/: CMakeLists.txt
example/some_exe/: CMakeLists.txt  custom_sections.cpp  custom_sections.hpp  main.cpp  test_section.cpp
example/some_lib/: CMakeLists.txt  export.h  lib.cpp  lib.hpp
include/: CMakeLists.txt  defines.h  exports.h  meta-parse.h  meta-parser.h
include/pugixml/: pugiconfig.hpp  pugixml.hpp
include/refl/: any.hpp  builders.hpp  constant.hpp  delegate.hpp  field.hpp  field.inl  fwd.hpp  generic_type.hpp  method.hpp  method.inl  property.hpp  property_container.hpp  ref.hpp  registry.hpp  type.hpp  type.inl  type_fwd.hpp  type_id.hpp
include/serialization/: jsonify.hpp  xml.hpp
include/utility/: constexpr.hpp  ref.hpp  string_name.hpp  variant.hpp
src/: CMakeLists.txt  empty.cpp
src/refl/: any.cpp  any_converter.hpp  basic_types.cpp  basic_types.hpp  builders.cpp  constant.cpp  delegate.cpp  field.cpp  generic_type.cpp  method.cpp  property_container.cpp  ref.cpp  registry.cpp  type.cpp
src/serialization/: jsonify.cpp  xml.cpp
src/utility/: ref.cpp  string_name.cpp  variant.cpp
tests/: CMakeLists.txt  any_test.cpp  array_test.cpp  builder_test.cpp  constexpr_test.cpp  field_test.cpp  foo_test.cpp  method_test.cpp  ref_test.cpp  registry_test.cpp  serialize_test.cpp  string_name_test.cpp  typeid_test.cpp  variant_test.cpp
tests/catch2/: catch_amalgamated.hpp
tests/test_types/: types.cpp  types.h
tools/: CMakeLists.txt  llvm.cmake
tools/meta-parser/: CMakeLists.txt  clang_utils.cpp  clang_utils.hpp  code_parser.hpp  compile_options.cpp  compile_options.hpp  header_pair.cpp  header_pair.hpp  main.cpp  system_include.cpp.in
tools/meta-parser/clang/: cursor.cpp  cursor.hpp  cursor_type.cpp  cursor_type.hpp  translate_unit.cpp  translate_unit.hpp
tools/meta-parser/codegen/: code_generator.cpp  code_generator.hpp
tools/meta-parser/parser/: code_parser.cpp  code_parser.hpp  compile_options.cpp  header_pair.cpp  meta_info.cpp  meta_info.hpp
tools/meta-parser/types/: constant.cpp  constant.hpp  field.cpp  field.hpp  function.cpp  function.hpp  namespace.cpp  namespace.hpp  type_context.cpp  type_context.hpp  type_info.cpp  type_info.hpp  user_type.cpp  user_type.hpp
tools/meta-parser/utilities/: clang_utils.cpp  clang_utils.hpp  file_utils.cpp  file_utils.hpp  str_utils.cpp  str_utils.hpp
tools/utilities/: CMakeLists.txt  write-file.cpp
